--- a/src/Batch/Batch/Properties/Resources.resx
+++ b/src/Batch/Batch/Properties/Resources.resx
@@ -508,4 +508,10 @@
   <data name="GetPrivateLinkResourceNoFilter" xml:space="preserve">
     <value>Getting all private link resources in resource group "{0}", account "{0}"</value>
   </data>
+  <data name="GettingSupportedVirtualMachineSkus" xml:space="preserve">
+    <value>Getting all supported virtual machine Sus for location {0}.</value>
+  </data>
+  <data name="GettingSupportedVirtualMachineSkusWithODataParameters" xml:space="preserve">
+    <value>Getting all supported virtual machine Sus for location {0}. MaxResults: {1}, Filter: {2}.</value>
+  </data>
 </root>
